[gd_scene load_steps=18 format=3 uid="uid://csahdmph2aji4"]

[ext_resource type="Script" path="res://src/Game.gd" id="1_wmfvw"]
[ext_resource type="PackedScene" uid="uid://dameelfdwsxx4" path="res://scenes/HUD.tscn" id="2_mne7o"]
[ext_resource type="Script" path="res://src/UI/PauseMenu.gd" id="2_xdcds"]
[ext_resource type="PackedScene" uid="uid://dp02anwflcyv8" path="res://scenes/OptionsWindow.tscn" id="3_j5m3f"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="3_tg1ur"]
[ext_resource type="Script" path="res://src/UI/ShowPopupButton.gd" id="5_k0seo"]
[ext_resource type="Script" path="res://src/UI/ChangeSceneButton.gd" id="6_2c0ui"]
[ext_resource type="Script" path="res://src/Pause.gd" id="8_cpxey"]
[ext_resource type="Texture2D" uid="uid://bmetb0g61y3bv" path="res://icon.svg" id="8_lyls7"]
[ext_resource type="Script" path="res://src/SocketClient.gd" id="9_vqlxt"]
[ext_resource type="Texture2D" uid="uid://b5oi5ophboyyf" path="res://img/atlas.png" id="11_b5rqa"]
[ext_resource type="PackedScene" uid="uid://72ydxqw8s068" path="res://scenes/player_controller.tscn" id="12_oite8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v63bu"]
shader = ExtResource("3_tg1ur")
shader_parameter/directions = 32.0
shader_parameter/quality = 8.0
shader_parameter/size = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_sgf64"]
font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_syoim"]
font_size = 28

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bygpm"]
resource_name = "map"
texture = ExtResource("11_b5rqa")
texture_region_size = Vector2i(64, 64)
1:1/next_alternative_id = 3
1:1/0 = 0
2:1/next_alternative_id = 4
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
16:1/0 = 0
17:1/0 = 0
19:1/0 = 0
20:1/0 = 0
22:1/0 = 0
23:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
31:1/0 = 0
32:1/0 = 0
34:1/0 = 0
35:1/0 = 0
37:1/0 = 0
38:1/0 = 0
40:1/0 = 0
41:1/0 = 0
43:1/0 = 0
44:1/0 = 0
46:1/0 = 0
47:1/0 = 0
49:1/0 = 0
50:1/0 = 0
52:1/0 = 0
53:1/0 = 0
1:2/next_alternative_id = 3
1:2/0 = 0
2:2/next_alternative_id = 3
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
16:2/0 = 0
17:2/0 = 0
19:2/0 = 0
20:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
31:2/0 = 0
32:2/0 = 0
34:2/0 = 0
35:2/0 = 0
37:2/0 = 0
38:2/0 = 0
40:2/0 = 0
41:2/0 = 0
43:2/0 = 0
44:2/0 = 0
46:2/0 = 0
47:2/0 = 0
49:2/0 = 0
50:2/0 = 0
52:2/0 = 0
53:2/0 = 0
1:4/0 = 0
2:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
16:4/0 = 0
17:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
31:4/0 = 0
32:4/0 = 0
34:4/0 = 0
35:4/0 = 0
37:4/0 = 0
38:4/0 = 0
40:4/0 = 0
41:4/0 = 0
43:4/0 = 0
44:4/0 = 0
46:4/0 = 0
47:4/0 = 0
49:4/0 = 0
50:4/0 = 0
52:4/0 = 0
53:4/0 = 0
1:5/0 = 0
2:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
19:5/0 = 0
20:5/0 = 0
22:5/0 = 0
23:5/0 = 0
25:5/0 = 0
26:5/0 = 0
28:5/0 = 0
29:5/0 = 0
31:5/0 = 0
32:5/0 = 0
34:5/0 = 0
35:5/0 = 0
37:5/0 = 0
38:5/0 = 0
40:5/0 = 0
41:5/0 = 0
43:5/0 = 0
44:5/0 = 0
46:5/0 = 0
47:5/0 = 0
49:5/0 = 0
50:5/0 = 0
52:5/0 = 0
53:5/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
13:7/0 = 0
14:7/0 = 0
16:7/0 = 0
17:7/0 = 0
19:7/0 = 0
20:7/0 = 0
22:7/0 = 0
23:7/0 = 0
25:7/0 = 0
26:7/0 = 0
28:7/0 = 0
29:7/0 = 0
31:7/0 = 0
32:7/0 = 0
34:7/0 = 0
35:7/0 = 0
37:7/0 = 0
38:7/0 = 0
40:7/0 = 0
41:7/0 = 0
43:7/0 = 0
44:7/0 = 0
46:7/0 = 0
47:7/0 = 0
49:7/0 = 0
50:7/0 = 0
52:7/0 = 0
53:7/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
13:8/0 = 0
14:8/0 = 0
16:8/0 = 0
17:8/0 = 0
19:8/0 = 0
20:8/0 = 0
22:8/0 = 0
23:8/0 = 0
25:8/0 = 0
26:8/0 = 0
28:8/0 = 0
29:8/0 = 0
31:8/0 = 0
32:8/0 = 0
34:8/0 = 0
35:8/0 = 0
37:8/0 = 0
38:8/0 = 0
40:8/0 = 0
41:8/0 = 0
43:8/0 = 0
44:8/0 = 0
46:8/0 = 0
47:8/0 = 0
49:8/0 = 0
50:8/0 = 0
52:8/0 = 0
53:8/0 = 0
1:10/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
16:10/0 = 0
17:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
28:10/0 = 0
29:10/0 = 0
31:10/0 = 0
32:10/0 = 0
34:10/0 = 0
35:10/0 = 0
37:10/0 = 0
38:10/0 = 0
40:10/0 = 0
41:10/0 = 0
43:10/0 = 0
44:10/0 = 0
46:10/0 = 0
47:10/0 = 0
49:10/0 = 0
50:10/0 = 0
52:10/0 = 0
53:10/0 = 0
1:11/0 = 0
2:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
25:11/0 = 0
26:11/0 = 0
28:11/0 = 0
29:11/0 = 0
31:11/0 = 0
32:11/0 = 0
34:11/0 = 0
35:11/0 = 0
37:11/0 = 0
38:11/0 = 0
40:11/0 = 0
41:11/0 = 0
43:11/0 = 0
44:11/0 = 0
46:11/0 = 0
47:11/0 = 0
49:11/0 = 0
50:11/0 = 0
52:11/0 = 0
53:11/0 = 0
1:13/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
16:13/0 = 0
17:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
25:13/0 = 0
26:13/0 = 0
28:13/0 = 0
29:13/0 = 0
31:13/0 = 0
32:13/0 = 0
34:13/0 = 0
35:13/0 = 0
37:13/0 = 0
38:13/0 = 0
40:13/0 = 0
41:13/0 = 0
43:13/0 = 0
44:13/0 = 0
46:13/0 = 0
47:13/0 = 0
49:13/0 = 0
50:13/0 = 0
52:13/0 = 0
53:13/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0
7:14/0 = 0
8:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
16:14/0 = 0
17:14/0 = 0
19:14/0 = 0
20:14/0 = 0
22:14/0 = 0
23:14/0 = 0
25:14/0 = 0
26:14/0 = 0
28:14/0 = 0
29:14/0 = 0
31:14/0 = 0
32:14/0 = 0
34:14/0 = 0
35:14/0 = 0
37:14/0 = 0
38:14/0 = 0
40:14/0 = 0
41:14/0 = 0
43:14/0 = 0
44:14/0 = 0
46:14/0 = 0
47:14/0 = 0
49:14/0 = 0
50:14/0 = 0
52:14/0 = 0
53:14/0 = 0
1:16/0 = 0
2:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
16:16/0 = 0
17:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
25:16/0 = 0
26:16/0 = 0
28:16/0 = 0
29:16/0 = 0
31:16/0 = 0
32:16/0 = 0
34:16/0 = 0
35:16/0 = 0
37:16/0 = 0
38:16/0 = 0
40:16/0 = 0
41:16/0 = 0
43:16/0 = 0
44:16/0 = 0
46:16/0 = 0
47:16/0 = 0
49:16/0 = 0
50:16/0 = 0
52:16/0 = 0
53:16/0 = 0
1:17/0 = 0
2:17/0 = 0
4:17/0 = 0
5:17/0 = 0
7:17/0 = 0
8:17/0 = 0
10:17/0 = 0
11:17/0 = 0
13:17/0 = 0
14:17/0 = 0
16:17/0 = 0
17:17/0 = 0
19:17/0 = 0
20:17/0 = 0
22:17/0 = 0
23:17/0 = 0
25:17/0 = 0
26:17/0 = 0
28:17/0 = 0
29:17/0 = 0
31:17/0 = 0
32:17/0 = 0
34:17/0 = 0
35:17/0 = 0
37:17/0 = 0
38:17/0 = 0
40:17/0 = 0
41:17/0 = 0
43:17/0 = 0
44:17/0 = 0
46:17/0 = 0
47:17/0 = 0
49:17/0 = 0
50:17/0 = 0
52:17/0 = 0
53:17/0 = 0
1:18/0 = 0
2:18/0 = 0
4:18/0 = 0
5:18/0 = 0
7:18/0 = 0
8:18/0 = 0
10:18/0 = 0
11:18/0 = 0
1:19/0 = 0
2:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
10:19/0 = 0
11:19/0 = 0
13:19/0 = 0
14:19/0 = 0
16:19/0 = 0
17:19/0 = 0
19:19/0 = 0
20:19/0 = 0
22:19/0 = 0
23:19/0 = 0
25:19/0 = 0
26:19/0 = 0
28:19/0 = 0
29:19/0 = 0
31:19/0 = 0
32:19/0 = 0
34:19/0 = 0
35:19/0 = 0
37:19/0 = 0
38:19/0 = 0
40:19/0 = 0
41:19/0 = 0
43:19/0 = 0
44:19/0 = 0
46:19/0 = 0
47:19/0 = 0
49:19/0 = 0
50:19/0 = 0
52:19/0 = 0
53:19/0 = 0
1:20/0 = 0
2:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
10:20/0 = 0
11:20/0 = 0
13:20/0 = 0
14:20/0 = 0
16:20/0 = 0
17:20/0 = 0
19:20/0 = 0
20:20/0 = 0
22:20/0 = 0
23:20/0 = 0
25:20/0 = 0
26:20/0 = 0
28:20/0 = 0
29:20/0 = 0
31:20/0 = 0
32:20/0 = 0
34:20/0 = 0
35:20/0 = 0
37:20/0 = 0
38:20/0 = 0
40:20/0 = 0
41:20/0 = 0
43:20/0 = 0
44:20/0 = 0
46:20/0 = 0
47:20/0 = 0
49:20/0 = 0
50:20/0 = 0
52:20/0 = 0
53:20/0 = 0

[sub_resource type="TileSet" id="TileSet_t21ec"]
tile_size = Vector2i(64, 64)
sources/3 = SubResource("TileSetAtlasSource_bygpm")

[node name="Game" type="Node2D" node_paths=PackedStringArray("pause_ctl", "pause_menu")]
script = ExtResource("1_wmfvw")
pause_ctl = NodePath("Pause")
pause_menu = NodePath("PauseMenu")

[node name="HUD" parent="." instance=ExtResource("2_mne7o")]
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="." node_paths=PackedStringArray("resume_button", "options_menu")]
visible = false
script = ExtResource("2_xdcds")
resume_button = NodePath("Container/MenuMargin/Menu/Resume")
options_menu = NodePath("OptionsWindow")

[node name="BackgroundBlur" type="TextureRect" parent="PauseMenu"]
material = SubResource("ShaderMaterial_v63bu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_lyls7")

[node name="Container" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMargin" type="MarginContainer" parent="PauseMenu/Container"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Title" type="Label" parent="PauseMenu/Container/TitleMargin"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_sgf64")
horizontal_alignment = 1

[node name="MenuMargin" type="MarginContainer" parent="PauseMenu/Container"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="Menu" type="VBoxContainer" parent="PauseMenu/Container/MenuMargin"]
layout_mode = 2
size_flags_vertical = 10

[node name="Resume" type="Button" parent="PauseMenu/Container/MenuMargin/Menu"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="PauseMenu/Container/MenuMargin/Menu" node_paths=PackedStringArray("popup")]
layout_mode = 2
text = "Options"
script = ExtResource("5_k0seo")
popup = NodePath("../../../../OptionsWindow")

[node name="QuitToMenu" type="Button" parent="PauseMenu/Container/MenuMargin/Menu" node_paths=PackedStringArray("confirm_dialog")]
layout_mode = 2
text = "Quit to menu"
script = ExtResource("6_2c0ui")
next_scene_name = "res://scenes/MainMenu.tscn"
confirm_dialog = NodePath("../../../../ConfirmQuit")

[node name="OptionsWindow" parent="PauseMenu" instance=ExtResource("3_j5m3f")]
visible = false

[node name="ConfirmQuit" type="ConfirmationDialog" parent="PauseMenu"]
title = ""
initial_position = 2
size = Vector2i(289, 105)
unresizable = true
popup_window = true
ok_button_text = "Yes"
dialog_text = "Do you want to quit to main menu?"
dialog_autowrap = true
cancel_button_text = "No"

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false

[node name="BackgroundBlur" type="TextureRect" parent="GameOverScreen"]
material = SubResource("ShaderMaterial_v63bu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_lyls7")

[node name="Container" type="VBoxContainer" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMargin" type="MarginContainer" parent="GameOverScreen/Container"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Title" type="Label" parent="GameOverScreen/Container/TitleMargin"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_sgf64")
horizontal_alignment = 1

[node name="FlavorText" type="Label" parent="GameOverScreen/Container"]
layout_mode = 2
text = "You won! Or lost. I didn't pay attention..."
label_settings = SubResource("LabelSettings_syoim")
horizontal_alignment = 1

[node name="MenuMargin" type="MarginContainer" parent="GameOverScreen/Container"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 150

[node name="Menu" type="VBoxContainer" parent="GameOverScreen/Container/MenuMargin"]
layout_mode = 2

[node name="TryAgain" type="Button" parent="GameOverScreen/Container/MenuMargin/Menu"]
layout_mode = 2
text = "Try Again"
script = ExtResource("6_2c0ui")
next_scene_name = "res://scenes/Game.tscn"

[node name="QuitToMenu" type="Button" parent="GameOverScreen/Container/MenuMargin/Menu"]
layout_mode = 2
text = "Quit to menu"
script = ExtResource("6_2c0ui")
next_scene_name = "res://scenes/MainMenu.tscn"

[node name="Pause" type="Node" parent="." node_paths=PackedStringArray("pause_screen")]
process_mode = 3
script = ExtResource("8_cpxey")
pause_screen = NodePath("../PauseMenu")

[node name="SocketClient" type="Node" parent="."]
script = ExtResource("9_vqlxt")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t21ec")
format = 2
layer_0/name = "background"
layer_0/modulate = Color(0.650128, 0.650128, 0.650128, 1)
layer_0/tile_data = PackedInt32Array(0, 655363, 10, 65536, 655363, 11, 1, 720899, 10, 65537, 720899, 11, 2, 65539, 1, 65538, 65539, 2, 3, 131075, 1, 65539, 131075, 2, 4, 65539, 1, 65540, 65539, 2, 5, 131075, 1, 65541, 131075, 2, 6, 65539, 1, 65542, 65539, 2, 7, 131075, 1, 65543, 131075, 2, 8, 65539, 1, 65544, 65539, 2, 9, 131075, 1, 65545, 131075, 2, 10, 65539, 1, 65546, 65539, 2, 11, 131075, 1, 65547, 131075, 2, 12, 65539, 1, 65548, 65539, 2, 13, 131075, 1, 65549, 131075, 2, 14, 65539, 1, 65550, 65539, 2, 15, 131075, 1, 65551, 131075, 2, 16, 65539, 1, 65552, 65539, 2, 17, 131075, 1, 65553, 131075, 2, 131088, 65539, 1, 196624, 65539, 2, 131089, 131075, 1, 196625, 131075, 2, 131086, 65539, 1, 196622, 65539, 2, 131087, 131075, 1, 196623, 131075, 2, 131084, 65539, 1, 196620, 65539, 2, 131085, 131075, 1, 196621, 131075, 2, 131082, 65539, 1, 196618, 65539, 2, 131083, 131075, 1, 196619, 131075, 2, 131080, 65539, 1, 196616, 65539, 2, 131081, 131075, 1, 196617, 131075, 2, 131078, 65539, 1, 196614, 65539, 2, 131079, 131075, 1, 196615, 131075, 2, 131076, 65539, 1, 196612, 65539, 2, 131077, 131075, 1, 196613, 131075, 2, 131074, 65539, 1, 196610, 65539, 2, 131075, 131075, 1, 196611, 131075, 2, 131072, 65539, 1, 196608, 65539, 2, 131073, 131075, 1, 196609, 131075, 2, 262144, 65539, 1, 327680, 65539, 2, 262145, 131075, 1, 327681, 131075, 2, 393216, 65539, 1, 458752, 65539, 2, 393217, 131075, 1, 458753, 131075, 2, 524288, 65539, 1, 589824, 65539, 2, 524289, 131075, 1, 589825, 131075, 2, 524290, 65539, 1, 589826, 65539, 2, 524291, 131075, 1, 589827, 131075, 2, 524292, 65539, 1, 589828, 65539, 2, 524293, 131075, 1, 589829, 131075, 2, 524294, 65539, 1, 589830, 65539, 2, 524295, 131075, 1, 589831, 131075, 2, 524296, 65539, 1, 589832, 65539, 2, 524297, 131075, 1, 589833, 131075, 2, 524298, 65539, 1, 589834, 65539, 2, 524299, 131075, 1, 589835, 131075, 2, 524300, 65539, 1, 589836, 65539, 2, 524301, 131075, 1, 589837, 131075, 2, 524302, 65539, 1, 589838, 65539, 2, 524303, 655363, 10, 589839, 655363, 11, 524304, 720899, 10, 589840, 720899, 11, 524305, 131075, 1, 589841, 131075, 2, 393232, 65539, 1, 458768, 65539, 2, 393233, 131075, 1, 458769, 131075, 2, 262160, 720899, 10, 327696, 720899, 11, 262161, 131075, 1, 327697, 131075, 2, 262158, 65539, 1, 327694, 65539, 2, 262159, 655363, 10, 327695, 655363, 11, 262156, 65539, 1, 327692, 65539, 2, 262157, 131075, 1, 327693, 131075, 2, 262154, 65539, 1, 327690, 65539, 2, 262155, 131075, 1, 327691, 131075, 2, 262152, 65539, 1, 327688, 65539, 2, 262153, 131075, 1, 327689, 131075, 2, 262150, 65539, 1, 327686, 65539, 2, 262151, 131075, 1, 327687, 131075, 2, 262148, 65539, 1, 327684, 65539, 2, 262149, 131075, 1, 327685, 131075, 2, 262146, 65539, 1, 327682, 65539, 2, 262147, 131075, 1, 327683, 131075, 2, 393218, 65539, 1, 458754, 65539, 2, 393219, 131075, 1, 458755, 131075, 2, 393220, 65539, 1, 458756, 65539, 2, 393221, 131075, 1, 458757, 131075, 2, 393222, 65539, 1, 458758, 65539, 2, 393223, 131075, 1, 458759, 131075, 2, 393224, 65539, 1, 458760, 65539, 2, 393225, 131075, 1, 458761, 131075, 2, 393226, 65539, 1, 458762, 65539, 2, 393227, 131075, 1, 458763, 131075, 2, 393228, 65539, 1, 458764, 65539, 2, 393229, 131075, 1, 458765, 131075, 2, 393230, 65539, 1, 458766, 65539, 2, 393231, 131075, 1, 458767, 131075, 2, 18, 65539, 1, 65554, 65539, 2, 19, 131075, 1, 65555, 131075, 2, 20, 65539, 1, 65556, 65539, 2, 21, 131075, 1, 65557, 131075, 2, 22, 65539, 1, 65558, 65539, 2, 23, 131075, 1, 65559, 131075, 2, 24, 65539, 1, 65560, 65539, 2, 25, 131075, 1, 65561, 131075, 2, 26, 65539, 1, 65562, 65539, 2, 27, 131075, 1, 65563, 131075, 2, 28, 65539, 1, 65564, 65539, 2, 29, 131075, 1, 65565, 131075, 2, 131100, 65539, 1, 196636, 65539, 2, 131101, 131075, 1, 196637, 131075, 2, 131098, 65539, 1, 196634, 65539, 2, 131099, 131075, 1, 196635, 131075, 2, 131096, 65539, 1, 196632, 65539, 2, 131097, 131075, 1, 196633, 131075, 2, 131094, 65539, 1, 196630, 65539, 2, 131095, 131075, 1, 196631, 131075, 2, 131092, 65539, 1, 196628, 65539, 2, 131093, 131075, 1, 196629, 131075, 2, 131090, 65539, 1, 196626, 65539, 2, 131091, 131075, 1, 196627, 131075, 2, 262162, 65539, 1, 327698, 65539, 2, 262163, 131075, 1, 327699, 131075, 2, 262164, 65539, 1, 327700, 65539, 2, 262165, 131075, 1, 327701, 131075, 2, 262166, 65539, 1, 327702, 65539, 2, 262167, 131075, 1, 327703, 131075, 2, 262168, 65539, 1, 327704, 65539, 2, 262169, 131075, 1, 327705, 131075, 2, 262170, 65539, 1, 327706, 65539, 2, 262171, 131075, 1, 327707, 131075, 2, 262172, 65539, 1, 327708, 65539, 2, 262173, 131075, 1, 327709, 131075, 2, 393244, 65539, 1, 458780, 65539, 2, 393245, 131075, 1, 458781, 131075, 2, 393242, 65539, 1, 458778, 65539, 2, 393243, 131075, 1, 458779, 131075, 2, 393240, 65539, 1, 458776, 65539, 2, 393241, 131075, 1, 458777, 131075, 2, 393238, 65539, 1, 458774, 65539, 2, 393239, 131075, 1, 458775, 131075, 2, 393236, 65539, 1, 458772, 65539, 2, 393237, 131075, 1, 458773, 131075, 2, 393234, 65539, 1, 458770, 65539, 2, 393235, 131075, 1, 458771, 131075, 2, 524306, 65539, 1, 589842, 65539, 2, 524307, 131075, 1, 589843, 131075, 2, 524308, 65539, 1, 589844, 65539, 2, 524309, 131075, 1, 589845, 131075, 2, 524310, 65539, 1, 589846, 65539, 2, 524311, 131075, 1, 589847, 131075, 2, 524312, 65539, 1, 589848, 65539, 2, 524313, 131075, 1, 589849, 131075, 2, 524314, 65539, 1, 589850, 65539, 2, 524315, 131075, 1, 589851, 131075, 2, 524316, 65539, 1, 589852, 65539, 2, 524317, 131075, 1, 589853, 131075, 2, 655386, 65539, 1, 720922, 65539, 2, 655387, 131075, 1, 720923, 131075, 2, 655388, 65539, 1, 720924, 65539, 2, 655389, 131075, 1, 720925, 131075, 2, 655384, 65539, 1, 720920, 65539, 2, 655385, 131075, 1, 720921, 131075, 2, 655382, 65539, 1, 720918, 65539, 2, 655383, 131075, 1, 720919, 131075, 2, 655380, 65539, 1, 720916, 65539, 2, 655381, 131075, 1, 720917, 131075, 2, 655378, 65539, 1, 720914, 65539, 2, 655379, 131075, 1, 720915, 131075, 2, 655376, 65539, 1, 720912, 65539, 2, 655377, 131075, 1, 720913, 131075, 2, 655374, 65539, 1, 720910, 65539, 2, 655375, 131075, 1, 720911, 131075, 2, 655372, 65539, 1, 720908, 65539, 2, 655373, 131075, 1, 720909, 131075, 2, 655370, 720899, 10, 720906, 720899, 11, 655371, 131075, 1, 720907, 131075, 2, 655368, 65539, 1, 720904, 65539, 2, 655369, 655363, 10, 720905, 655363, 11, 655366, 65539, 1, 720902, 65539, 2, 655367, 131075, 1, 720903, 131075, 2, 655364, 65539, 1, 720900, 65539, 2, 655365, 131075, 1, 720901, 131075, 2, 655362, 65539, 1, 720898, 65539, 2, 655363, 131075, 1, 720899, 131075, 2, 655360, 65539, 1, 720896, 65539, 2, 655361, 131075, 1, 720897, 131075, 2, 786432, 65539, 1, 851968, 65539, 2, 786433, 131075, 1, 851969, 131075, 2, 786434, 65539, 1, 851970, 65539, 2, 786435, 131075, 1, 851971, 131075, 2, 786436, 65539, 1, 851972, 65539, 2, 786437, 131075, 1, 851973, 131075, 2, 786438, 65539, 1, 851974, 65539, 2, 786439, 131075, 1, 851975, 131075, 2, 786440, 65539, 1, 851976, 65539, 2, 786441, 131075, 1, 851977, 131075, 2, 786442, 65539, 1, 851978, 65539, 2, 786443, 131075, 1, 851979, 131075, 2, 786444, 65539, 1, 851980, 65539, 2, 786445, 131075, 1, 851981, 131075, 2, 786450, 65539, 1, 851986, 65539, 2, 786451, 131075, 1, 851987, 131075, 2, 786452, 65539, 1, 851988, 65539, 2, 786453, 131075, 1, 851989, 131075, 2, 786454, 65539, 1, 851990, 65539, 2, 786455, 131075, 1, 851991, 131075, 2, 786456, 65539, 1, 851992, 65539, 2, 786457, 131075, 1, 851993, 131075, 2, 786458, 65539, 1, 851994, 65539, 2, 786459, 131075, 1, 851995, 131075, 2, 786460, 65539, 1, 851996, 65539, 2, 786461, 131075, 1, 851997, 131075, 2, 786448, 65539, 1, 851984, 65539, 2, 786449, 131075, 1, 851985, 131075, 2, 786446, 65539, 1, 851982, 65539, 2, 786447, 131075, 1, 851983, 131075, 2)
layer_1/name = "foreground"
layer_1/tile_data = PackedInt32Array()

[node name="PlayerController" parent="." instance=ExtResource("12_oite8")]
